kubernetesfile.yaml
# SERVICE
apiVersion: v1
kind: Service
metadata:
  name: gateway
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - name: http
      protocol: TCP
      port: 9090
      #   nodePort: 30130
      nodePort: null
      targetPort: 9090
---

# DEPOLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  #  minReadySeconds: 20
  revisionHistoryLimit: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: heavyflood/scg:release
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9090
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          livenessProbe:
            exec:
              command: ["sh", "-c", "cd /"]
            initialDelaySeconds: 30
            periodSeconds: 30
          #          timeoutSeconds: 1
          #          successThreshold: 1
          #          failureThreshold: 3
          #          httpGet:
          #            path: /
          #            port: 8080
          #          tcpSocket:
          #            port: 8080
          #          initialDelaySeconds: 5
          #          periodSeconds: 5
          #          successThreshold: 1
          readinessProbe:
            exec:
              command: ["sh", "-c", "cd /"]
            initialDelaySeconds: 30
            periodSeconds: 15
          #          timeoutSeconds: 1
          #          successThreshold: 1
          #          failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 20"]
      imagePullSecrets:
        - name: regcred
---

#Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scg-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: gateway
      port:
        number: 9090
